# wz-extension

./: .gitignore  CLAUDE.md  CMakeLists.txt  Makefile  README.md  build-windows.bat  extension_config.cmake
.github/workflows/: linux-build-on-push.yml  macos-build-on-push.yml  mlw.yml  release.yml  rl_mac_linux.yml  windows-build-on-push.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-code-cleanup/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-CONTEXT.md  01-RESEARCH.md  01-VERIFICATION.md
.planning/phases/02-transaction-fix/: 02-01-PLAN.md  02-01-SUMMARY.md  02-RESEARCH.md
.planning/phases/03-constraint-validation/: 03-01-PLAN.md  03-01-SUMMARY.md  03-RESEARCH.md
docs/plans/: 2026-02-20-move-to-mssql-design.md  2026-02-20-move-to-mssql-plan.md  2026-02-26-batch-into-wz-design.md  2026-02-26-batch-into-wz-plan.md  2026-02-26-vorlauf-reuse-design.md  2026-02-26-vorlauf-reuse-plan.md
src/: constraint_checker.cpp  import_kontobezeichnung_function.cpp  into_wz_function.cpp  move_to_mssql_function.cpp  primanota_mapper.cpp  stps_drop_all_function.cpp  vorlauf_builder.cpp  wz_extension.cpp
src/include/: mssql_utils.hpp  wz_extension.hpp  wz_utils.hpp
